<resources>
    <string name="app_name">Conversor de Temperatura</string>
    <string name="temperature">Temperatura:</string>
    <string name="hint_temperature">Digite temperatura</string>
    <string name="select_temperature">Selecione a temperatura:</string>
    <string name="convert_temperature">Converter para:</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="kelvin">Kelvin</string>
    <string name="msgCtoF">Realizada a conversão de Celsius para Fahrenheit.</string>
    <string name="msgCtoK">Realizada a conversão de Celsius para Kelvin.</string>
    <string name="msgFtoC">Realizada a conversão de Fahrenheit para Celsius.</string>
    <string name="msgFtoK">Realizada a conversão de Fahrenheit para Kelvin.</string>
    <string name="msgKtoC">Realizada a conversão de Kelvin para Celsius.</string>
    <string name="msgKtoF">Realizada a conversão de Kelvin para Fahrenheit.</string>
    <string name="error_popup_notify">Não foi possível realizar a conversão de temperatura dos com dados informados.</string>
</resources>
