<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".view.MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <TextView
        android:id="@+id/textview_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/temperature"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edittext_temperature"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_temperature"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        app:layout_constraintBaseline_toBaselineOf="@+id/textview_temperature"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textview_temperature" />

    <TextView
        android:id="@+id/textview_select_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_temperature"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_temperature"
        android:layout_marginTop="24dp" />

    <RadioGroup
        android:id="@+id/radiogroup_units"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_select_unit"
        android:orientation="horizontal"
        android:layout_marginTop="4dp">

        <RadioButton
            android:id="@+id/radio_celsius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/celsius"
            android:textStyle="bold"
            android:layout_marginEnd="8dp"/>

        <RadioButton
            android:id="@+id/radio_fahrenheit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fahrenheit"
            android:textStyle="bold"
            android:layout_marginEnd="8dp"/>

        <RadioButton
            android:id="@+id/radio_kelvin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kelvin"
            android:textStyle="bold"/>
    </RadioGroup>

    <TextView
        android:id="@+id/textview_converter_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/convert_temperature"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radiogroup_units"
        app:layout_constraintBottom_toTopOf="@+id/btn_celsius"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="4dp" />

    <Button
        android:id="@+id/btn_celsius"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/celsius"
        android:textAllCaps="true"
        app:layout_constraintEnd_toStartOf="@+id/btn_fahrenheit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_converter_label"
        app:layout_constraintWidth_default="spread" />

    <Button
        android:id="@+id/btn_fahrenheit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:text="@string/fahrenheit"
        android:textAllCaps="true"
        app:layout_constraintEnd_toStartOf="@+id/btn_kelvin"
        app:layout_constraintStart_toEndOf="@+id/btn_celsius"
        app:layout_constraintTop_toBottomOf="@+id/textview_converter_label"
        app:layout_constraintWidth_default="spread" />

    <Button
        android:id="@+id/btn_kelvin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/kelvin"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_fahrenheit"
        app:layout_constraintTop_toBottomOf="@+id/textview_converter_label"
        app:layout_constraintWidth_default="spread"
        android:padding="8dp"/>

    <TextView
        android:id="@+id/textview_result_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/output"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/guideline_horizontal2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textview_result_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/output"
        app:layout_constraintEnd_toEndOf="@id/textview_result_number"
        app:layout_constraintStart_toStartOf="@id/textview_result_number"
        app:layout_constraintTop_toBottomOf="@+id/guideline_horizontal2" />

</androidx.constraintlayout.widget.ConstraintLayout>
